Bug 203494 - ipfw segfaults when nat parameters missing like "ipfw add nat"
Summary: ipfw segfaults when nat parameters missing like "ipfw add nat"
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: kern (show other bugs)
Version: 10.2-RELEASE
Hardware: amd64 Any
: --- Affects Only Me
Assignee: Andrey V. Elsukov
URL:
Keywords: patch
: 205928 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-10-01 22:12 UTC by Max Christian
Modified: 2016-01-09 09:45 UTC (History)
3 users (show)

See Also:


Attachments
strlen(null) issue (420 bytes, patch)
2015-10-02 01:48 UTC, bycn82
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Max Christian 2015-10-01 22:12:35 UTC
Calling "ipfw add nat" without further parameters causes a segmentation fault. This was reproducable on two hosts running ipfw from the base system: 10.2-RELEASE #0 r286666
Comment 1 bycn82 2015-10-02 01:48:23 UTC
Created attachment 161635 [details]
strlen(null) issue
Comment 2 commit-hook freebsd_committer freebsd_triage 2015-10-03 03:13:15 UTC
A commit references this bug:

Author: ae
Date: Sat Oct  3 03:12:57 UTC 2015
New revision: 288528
URL: https://svnweb.freebsd.org/changeset/base/288528

Log:
  Fix possible segmentation fault.

  PR:		203494
  MFC after:	1 week

Changes:
  head/sbin/ipfw/ipfw2.c
Comment 3 commit-hook freebsd_committer freebsd_triage 2015-10-12 07:50:31 UTC
A commit references this bug:

Author: ae
Date: Mon Oct 12 07:50:27 UTC 2015
New revision: 289170
URL: https://svnweb.freebsd.org/changeset/base/289170

Log:
  MFC r288528:
    Fix possible segmentation fault.

    PR:		203494

Changes:
_U  stable/10/
  stable/10/sbin/ipfw/ipfw2.c
Comment 4 commit-hook freebsd_committer freebsd_triage 2015-10-12 07:53:34 UTC
A commit references this bug:

Author: ae
Date: Mon Oct 12 07:53:04 UTC 2015
New revision: 289171
URL: https://svnweb.freebsd.org/changeset/base/289171

Log:
  MFC r288528:
    Fix possible segmentation fault.

    PR:		203494

Changes:
_U  stable/9/sbin/ipfw/
  stable/9/sbin/ipfw/ipfw2.c
Comment 5 Andrey V. Elsukov freebsd_committer freebsd_triage 2015-10-12 07:54:06 UTC
Fixed in head/, stable/10 and stable/9. Thanks!
Comment 6 Andrey V. Elsukov freebsd_committer freebsd_triage 2016-01-09 09:45:42 UTC
*** Bug 205928 has been marked as a duplicate of this bug. ***