MFC r288528:   Fix possible segmentation fault.

PR:		203494


Former-commit-id: 50a87cf6502a2c4f34882ab0b28a022e7db05544